added homework design

--- a/index.html
+++ b/index.html
@@ -1,15 +1,80 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>Document</title>
-</head>
-<body>
-    <section>
-        <p>hello</p>
-    </section>
-    <footer>
-        <p>copyright</p>
-    </footer>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Homework</title>
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header class="header-wraper">
+      <div class="header-block">
+        <a class="logo" href="index.html">
+          <img src="images/Logo.svg" alt="logo" />
+        </a>
+        <nav class="navigation">
+          <ul>
+            <li class="item"><a href="">Home</a></li>
+            <li class="item"><a href="">About</a></li>
+            <li class="item"><a href="">Pages</a></li>
+            <li class="item"><a href="">Shop</a></li>
+            <li class="item"><a href="">Projects</a></li>
+            <li class="item"><a href="">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <section class="section-bg">
+        <div class="container">
+          <div class="block1">
+
+            <div class="left-element">
+              <h3 class="title-section">Why Choose us?</h3>
+              <h1>We do not buy from the open market & traders.</h1>
+              <p>
+                Simply dummy text of the printing and typesetting industry.
+                Lorem had ceased to been the industry's standard the 1500s, when
+                an unknown
+              </p>
+              <div class="grey-block">
+                <img class="icon" src="images/Icon.svg" alt="" />
+                <p class="block-descr">100% Natural Product</p>
+              </div>
+              <p>Simply dummy text of the printing and typesetting industry Lorem Ipsum</p>
+              <div class="grey-block">
+                <img class="icon" src="images/Icon.svg" alt="" />
+                <p class="block-descr">100% Natural Product</p>
+              </div>
+              <p>Simply dummy text of the printing and typesetting industry Lorem Ipsum</p>
+
+            </div><!--
+            --><div class="right-element">
+                <img src="images/Image.jpg" alt="">
+            </div>
+          </div>
+
+          <div class="block2">
+            <div class="box active">
+                <h3>Refer Policy</h3>
+                <p>Simply dummy text of the printintypesetting industry.</p>
+            </div><!--
+            --><div class="box active">
+                <h3>Refer Policy</h3>
+                <p>Simply dummy text of the printintypesetting industry.</p>
+            </div><!-- 
+            --><div class="box active">
+                <h3>Refer Policy</h3>
+                <p>Simply dummy text of the printintypesetting industry.</p>
+            </div><!-- 
+            --><div class="box">
+                <h3>Refer Policy</h3>
+                <p>Simply dummy text of the printintypesetting industry.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
